fix: #1657 Fix standalone apps page container position on IE1 (#1723)

--- a/packages/marketplace/src/styles/blocks/standalone-app-detail.scss
+++ b/packages/marketplace/src/styles/blocks/standalone-app-detail.scss
@@ -1,5 +1,6 @@
 @import '../base/colors.scss';
 @import '../base/screen-size.scss';
+@import '../base/browser.scss';
 
 .preview {
   position: relative;
@@ -37,10 +38,15 @@
 .container {
   height: 100%;
   margin-bottom: auto;
-
   @include for-mobile-only {
     display: flex;
     flex-direction: column-reverse;
+  }
+}
+
+.flexContainer {
+  @include for-ie-only {
+    align-self: center;
   }
 }
 
